--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/marycpriyanka/Professional-ReadMe-generator.git"
   },
   "author": "Priyanka",
-  "license": "ISC",
+  "license": "MIT License",
   "bugs": {
     "url": "https://github.com/marycpriyanka/Professional-ReadMe-generator/issues"
   },
